--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Product preview card component</title>
@@ -15,10 +15,10 @@
 
       <picture>
         <source
-        srcset="../images/image-product-mobile.jpg"
+        srcset="/images/image-product-mobile.jpg"
         media="(max-width: 768px)"
         >
-        <img src="../images/image-product-desktop.jpg"  alt="perfume" class="image">
+        <img src="/images/image-product-desktop.jpg"  alt="perfume" class="image">
       </picture>
 
       <div class="info">
@@ -31,7 +31,7 @@
           <div class="acc-price">$149.99</div>
           <div class="markdown">$169.99</div>
         </div>
-        <button class="purchase"><img src="../images/icon-cart.svg" alt="cart"> <div class="button-text">Add to Cart</div></button>
+        <button class="purchase"><img src="/images/icon-cart.svg" alt="cart"> <div class="button-text">Add to Cart</div></button>
     </div>
   </main>
 </body>
